--- a/now.json
+++ b/now.json
@@ -12,9 +12,17 @@
 			"config": {
 				"maxLambdaSize": "45mb"
 			}
+		},
+		{
+			"src": "index.html",
+			"use": "@now/static"
 		}
 	],
 	"routes": [
+		{
+			"src": "/",
+			"dest": "index.html"
+		},
 		{
 			"src": "/(.*)",
 			"dest": "index.js"
